[chromium] LayerChromium::setNeedsDisplay does not apply contents scale correctly https://bugs.webkit.org/show_bug.cgi?id=77464

Source/WebCore:

Use bounds() instead of contentBounds() to calculate the region to mark
as needing painting in LayerChromium::setNeedsDisplay(). contentBounds()
includes contents scale, while bounds() does not.

Since this change also means that TiledLayerChromium::setNeedsDisplayRect() is
given an unscaled rectangle, modify that function to scale the rectangle before
using it to invalidate the underlying tiles.

Patch by Sami Kyostila <skyostil@chromium.org> on 2012-02-16
Reviewed by James Robinson.

Tests: New tests added to LayerChromium and TiledLayerChromium unit tests.

* platform/graphics/chromium/LayerChromium.h:
(WebCore::LayerChromium::setNeedsDisplay):
* platform/graphics/chromium/TiledLayerChromium.cpp:
(WebCore::TiledLayerChromium::setNeedsDisplayRect):

Source/WebKit/chromium:

Added a new unit test for TiledLayerChromium to verify its invalidation behavior when
the contents scale changes. Also enhance and existing unit test for LayerChromium to
verify the paint rectangle dimensions instead just checking that it is not empty.

Patch by Sami Kyostila <skyostil@chromium.org> on 2012-02-16
Reviewed by James Robinson.

* tests/LayerChromiumTest.cpp:
* tests/TiledLayerChromiumTest.cpp:
(WTF::FakeTiledLayerChromium::setNeedsDisplayRect):
(FakeTiledLayerChromium):
(WTF::FakeTiledLayerChromium::lastNeedsDisplayRect):
(WTF::TEST):
(WTF):

Canonical link: https://commits.webkit.org/95859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108025 268f45cc-cd09-0410-ab3c-d52691b4dbfc